agregre mis nombres y apellidos para agregarlos a la rama remota

--- a/index.html
+++ b/index.html
@@ -24,5 +24,6 @@
         <li>ANALISIS DE SISTEMAS</li>
         <li>DESARROLLO DE PAGINAS WEB</li>
     </ul>
+    <p>NOMBRES: MARCO ANTONIO | APELLIDOS: GARCIA VARGAS</p>
 </body>
 </html>
